# catanatron-1v1

./: .gitignore  Makefile  NOTICE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
catanatron/catanatron/: __init__.py  apply_action.py  colonist_1v1.py  (+4 more)
docs/: ARCHITECTURE.md  COLONIST_1V1.md  GPU_EXPERIMENT_BACKLOG.md  PLAN.md  README.md  RESULTS_LOG.md  RULES.md  TRAINING.md  UCL_CS_GPUS.md  UCL_MYRIAD.md
documentation/: README.md  SUMMARY.md
examples/: colonist_1v1_artifacts.py  colonist_1v1_backlog.py  colonist_1v1_bc.py  colonist_1v1_benchmark_report.py  colonist_1v1_distill.py  colonist_1v1_env_benchmark.py  colonist_1v1_evaluate.py  colonist_1v1_generate_data.py  colonist_1v1_ppo.py  colonist_1v1_publish_result.py  colonist_1v1_search_benchmark.py  colonist_1v1_teacher_benchmark.py  colonist_1v1_train.py  colonist_1v1_tui.py
requirements/: training-constraints.txt
scripts/: aws_storage.py  aws_storage_deploy.sh  aws_sync_run.sh  ec2_run_training.sh  ec2_setup.sh  local_strength_eval.sh
tests/: test_anchored_ppo.py  test_artifact_retention.py  test_bc_training.py  test_colonist_1v1.py  test_colonist_1v1_gym_training.py  test_colonist_1v1_training.py  test_distillation.py  test_eval_integrity.py  test_experiment_backlog.py  test_feature_profiles.py  test_game.py  test_gpu_readiness.py  test_gym.py  test_imports.py  test_machine_learning.py  test_model_architectures.py  test_model_schema.py  test_provenance.py  test_result_artifacts.py  test_search_benchmark.py  test_teacher_benchmark.py  test_training_callback.py
(+70 files in other folders)
