[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catanatron-1v1"
version = "0.1.0"
authors = [{ name = "Bryan Collazo", email = "bcollazo2010@gmail.com" }]
maintainers = [
    { name = "Peter Prendergast", email = "79646627+PeterLP123@users.noreply.github.com" },
]
description = "Colonist-style 1v1 Catan simulator and bot training toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
keywords = ["catan", "colonist", "reinforcement learning", "board game", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["networkx", "click", "rich"]

[project.optional-dependencies]
gym = ["gymnasium<=0.29.1", "numpy", "pandas", "fastparquet"]
tui = ["textual"]
dev = [
    "black==25.11.0",
    "pytest",
    "pytest-benchmark",
    "coverage",
]
colonist = [
    "torch>=2.0",
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
    "tensorboard",
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/PeterLP123/catanatron-1v1"
Repository = "https://github.com/PeterLP123/catanatron-1v1"
Upstream = "https://github.com/bcollazo/catanatron"

[project.scripts]
catanatron-play = "catanatron.cli.play:simulate"

[tool.setuptools.packages.find]
where = ["catanatron"]

[tool.black]
target-version = ["py311"]
